Fix cards sizes and LnF and responsive design, searchbar fields alignment and responsive design.

--- a/main.css
+++ b/main.css
@@ -66,6 +66,10 @@ body{
     /* max-width: 640px; */
     margin: 0 auto;
     padding: 0 20px;
+    border-bottom-right-radius: 300px;
+    border-bottom-left-radius: 300px;
+    border-top-right-radius: 300px;
+    border-top-left-radius: 300px
   }
 
 #tab-button {
@@ -116,6 +120,11 @@ body{
   }
 .tab-contents {
     margin-top: 20px;
+  }
+  @media screen and (max-width: 768px) {
+    .card {
+      max-width: 100%!important;
+    }
   }
   @media screen and (min-width: 768px) {
     .tab-button-outer {
@@ -179,4 +188,13 @@ body{
     background-color: #428bca;
     padding : 5px 15px;
   } */
-  
+
+  .card-img-top {
+    max-width: 100%;
+    height: 14vw;
+    object-fit: cover;
+}
+
+.card {
+  max-width: 24.299%;
+}
